--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,10 @@
     <link rel="shortcut icon" href="packages/master_layout/assets/img/favicon.png"/>
     <script async src="main.dart" type="application/dart"></script>
     <script async src="packages/browser/dart.js"></script>
-    <link href="packages/master_layout/assets/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="packages/master_layout/assets/bower_components/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" />
+    <link href="packages/master_layout/src/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="packages/master_layout/src/bower_components/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" />
     <link href="packages/master_layout/assets/style.css" rel="stylesheet" />
+    <link href="packages/master_layout/src/bower_components/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
     <title>CMAS&nbsp;&mdash; Cost and Management Accounting System</title>
 </head>
 <body class="navbar-fixed sidebar-nav fixed-nav">
@@ -26,9 +27,12 @@
             </div>
         </div>
     </app>
-    <script src="packages/master_layout/assets/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="packages/master_layout/assets/bower_components/tether/dist/js/tether.min.js"></script>
-    <script src="packages/master_layout/assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="packages/master_layout/assets/bower_components/PACE/pace.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/tether/dist/js/tether.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/PACE/pace.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/moment/min/moment.min.js"></script>
+    <script src="packages/master_layout/src/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="packages/master_layout/src/bower_components/gauge.js/dist/gauge.min.js"></script>
 </body>
 </html>
